--- a/hNext/hNext.WebClient/Views/Shared/Components/CaseHistoriesList/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/CaseHistoriesList/Default.cshtml
@@ -13,7 +13,7 @@
                 <tbody>
                     <tr v-for="h in histories" :key="h.id" @@click.stop.prevent="openHistory(h.id)">
                         <td>{{ h.hospital.name }}</td>
-                        <td>{{ h.departmentId ? h.department.name : '' }}</td>
+                        <td>{{ currentDepartment(h.admissions) }}</td>
                         <td>{{ date(h) }}</td>
                     </tr>
                 </tbody>
