--- a/hNext/hNext.WebClient/Views/Home/Index.cshtml
+++ b/hNext/hNext.WebClient/Views/Home/Index.cshtml
@@ -12,6 +12,7 @@
 @section Scripts
     {
     <script>
+        "use strict";
         const START_TAB = '@Model.Tabs.First().Key';
         const START_SIDE_TAB = '@Model.SideBar.First().Key';
     </script>
