--- a/hNext/hNext.WebClient/Views/Shared/Components/CaseHistoryStarter/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/CaseHistoryStarter/Default.cshtml
@@ -45,9 +45,10 @@
                         <input asp-for="Admitted" class="form-control" v-model="history.admitted"/>
                     </div>
                 </div>
-            <div class="d-flex flex-row flex-nowrap justify-content-between justify-content-lg-end mt-2 mx-3">
-                <button class="btn btn-primary" :disabled="!enabled" @@click.stop.prevent="save">@Localizer[nameof(Resources.Save)]</button>
-                <button class="btn btn-danger ml-2" :disabled="!enabled" @@click.stop.prevent="cancel">@Localizer[nameof(Resources.Cancel)]</button>
+                <div class="d-flex flex-row flex-nowrap justify-content-between justify-content-lg-end mt-2 mx-3">
+                    <button class="btn btn-primary" :disabled="!enabled" @@click.stop.prevent="save">@Localizer[nameof(Resources.Save)]</button>
+                    <button class="btn btn-danger ml-2" :disabled="!enabled" @@click.stop.prevent="cancel">@Localizer[nameof(Resources.Cancel)]</button>
+                </div>
             </div>
         </div>
     </form>
