--- a/hNext/hNext.WebClient/Views/Shared/Components/MainView/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/MainView/Default.cshtml
@@ -2,45 +2,47 @@
 @model ApplicationViewModel
 
 <template id="main-view-template">
-    <div class="d-flex flex-column flex-md-row justify-content-start align-items-stretch" v-cloak>
-        <div class="d-flex flex-row flex-grow-1">
-            <nav>
-                <ul class="nav nav-tabs flex-column">
-                    @foreach (var tab in Model.Tabs)
-                    {
-                        <li class="nav-item">
-                            <a class="nav-link side-tab-selector p-1" :class="{active : selectedTab == '@tab.Key'}"
-                               @@click="tabClicked('@tab.Key')">
-                                @tab.Value
-                            </a>
-                        </li>
-                    }
-                </ul>
-            </nav>
-            <main class="container-fluid flex-grow-1 main-panel">
-                <keep-alive>
-                    <component :is="selectedTab"></component>
-                </keep-alive>
-            </main>
-        </div>
-        <aside class="d-flex flex-row ml-4 ml-md-0 mt-3 mt-md-0">
-            <div class="d-flex flex-row flex-grow-1 h-100">
-                <keep-alive>
-                    <component class="w-100" :is="selectedSideTab"></component>
-                </keep-alive>
+    <div class="container-fluid ml-0">
+        <div class="row no-gutters mx-0" v-cloak>
+            <div class="col-lg-8 d-flex flex-row">
+                <nav>
+                    <ul class="nav nav-tabs flex-column">
+                        @foreach (var tab in Model.Tabs)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link side-tab-selector p-1" :class="{active : selectedTab == '@tab.Key'}"
+                                   @@click="tabClicked('@tab.Key')">
+                                    @tab.Value
+                                </a>
+                            </li>
+                        }
+                    </ul>
+                </nav>
+                <main class="container-fluid flex-grow-1 main-panel">
+                    <keep-alive>
+                        <component :is="selectedTab"></component>
+                    </keep-alive>
+                </main>
             </div>
-            <nav>
-                <ul class="nav nav-tabs flex-column">
-                    @foreach (var sideTab in Model.SideBar)
-                    {
-                        <li class="nav-item">
-                            <a class="nav-link side-tab-selector p-1" :class="{'active' : selectedSideTab == '@sideTab.Key' }" @@click="sideTabClicked('@sideTab.Key')">
-                                @sideTab.Value
-                            </a>
-                        </li>
-                    }
-                </ul>
-            </nav>
-        </aside>
+            <aside class="col-lg-4 d-flex flex-row ml-4 ml-lg-0 mt-3 mt-lg-0">
+                <div class="d-flex flex-row flex-grow-1 h-100">
+                    <keep-alive>
+                        <component class="w-100" :is="selectedSideTab"></component>
+                    </keep-alive>
+                </div>
+                <nav>
+                    <ul class="nav nav-tabs flex-column">
+                        @foreach (var sideTab in Model.SideBar)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link side-tab-selector p-1" :class="{'active' : selectedSideTab == '@sideTab.Key' }" @@click="sideTabClicked('@sideTab.Key')">
+                                    @sideTab.Value
+                                </a>
+                            </li>
+                        }
+                    </ul>
+                </nav>
+            </aside>
+        </div>
     </div>
 </template>
