--- a/hNext/hNext.WebClient/Sass/partials/_colors.scss
+++ b/hNext/hNext.WebClient/Sass/partials/_colors.scss
@@ -13,5 +13,6 @@ $error-background-color:#fee;
 $default-button-background: linear-gradient(lightsteelblue, steelblue 70%);
 $default-button-border-color:black;
 $default-button-hover-background: linear-gradient(#C0CEE9, #5692BE 70%);
+$default-button-toggle-background: linear-gradient(#5893e0, #0f70c1 70%);
 $danger-button-background:linear-gradient(tomato, red 70%);
 $danger-button-hover-background: linear-gradient(#FF8367, #FF2020 70%)
