--- a/hNext/hNext.WebClient/wwwroot/css/site.css
+++ b/hNext/hNext.WebClient/wwwroot/css/site.css
@@ -150,12 +150,18 @@ footer {
 .btn:active,
 .btn:active:focus,
 .btn.active:focus,
-.btn.active.focus {
+.btn.active.focus,
+.btn.focus {
   outline: none !important;
   box-shadow: none; }
 
-.btn:active {
+.btn:active,
+.btn.active {
   transform: scale(0.95, 0.95); }
+
+.btn-group-toggle .btn.active {
+  background-image: linear-gradient(#5893e0, #0f70c1 70%);
+  border-width: 2px 3px 3px 2px; }
 
 .btn-primary {
   background-image: linear-gradient(lightsteelblue, steelblue 70%);
